--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,13 @@
-body {
-  /* margin-left: 48px;
-  margin-right: 72px; */
-  margin-top: 72px;
-  width: 70%;
+#navbar {
+  display: 'flex';
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-top: 128px;
+  width: 60%;
+}
+
+#content {
+  margin-bottom: 128px;
+  width: 60%;
+  border-radius: 12px;
 }
