--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,25 @@
+body {
+  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(216,243,220,1) 70%, rgba(183,228,199,0.6) 100%);
+}
+
 #navbar {
   display: 'flex';
   padding-left: 24px;
   padding-right: 24px;
-  margin-top: 48px;
+  margin-top: 56px;
+  margin-bottom: 16px;
   width: 60%;
+  background-color: #ffffff;
+  border-radius: 12px;
 }
 
 #content {
   margin-bottom: 128px;
   width: 60%;
   border-radius: 12px;
+  /* background-color: #081c15; */
+}
+
+.inner-table {
+  background-color: #d3f0d617;
 }
